force-app/main/default/objects/Waitlist__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned</label>
    <type>Checkbox</type>
</CustomField>