force-app/main/default/objects/Waitlist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agent__c</columns>
    <columns>Listing__c</columns>
    <columns>Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>